index script src fix

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="js/x-buttons.js"></script>
+    <script src="js/x-buttons-lib.js"></script>
 </body>
 </html>
